--- a/erp-quimicos/pom.xml
+++ b/erp-quimicos/pom.xml
@@ -122,6 +122,19 @@
             <version>1.5-beta1</version>
         </dependency>
         
+        <!--para poder subir archivos en spring-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.1</version>
+        </dependency>
+        
     </dependencies>
     
     <build>
