--- a/erp-quimicos/pom.xml
+++ b/erp-quimicos/pom.xml
@@ -122,6 +122,13 @@
             <version>1.5-beta1</version>
         </dependency>
         
+        <!--para generar codigo QR del CFDI-->
+        <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>2.0</version>
+        </dependency>
+        
         <!--para poder subir archivos en spring-->
         <dependency>
             <groupId>commons-fileupload</groupId>
