--- a/erp-quimicos/pom.xml
+++ b/erp-quimicos/pom.xml
@@ -141,7 +141,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.1</version>
         </dependency>
-        
+        <!--
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+        -->
     </dependencies>
     
     <build>
