--- a/erp-quimicos/pom.xml
+++ b/erp-quimicos/pom.xml
@@ -148,6 +148,12 @@
             <version>2.7.1</version>
         </dependency>
         -->
+        
+        <dependency>
+            <groupId>net.sourceforge.htmlcleaner</groupId>
+            <artifactId>htmlcleaner</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
     
     <build>
